fix home page header to fit on smaller display

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -4,6 +4,6 @@
 
 @media (max-width: 480px) {
 	.hero-unit h1 {
-		font-size: 40px;
+		font-size: 30px;
 		}
 }
